--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "name": "management",
     "version": "1.0.0",
-    "Scripts": {
+    "scripts": {
         "client": "cd client && yarn start",
         "server": "nodemon server.js",
-        "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn clinet\""
+        "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
         "body-parser": "^1.18.3",
-        "express": "^4.16.4"
+        "express": "^4.16.4",
+        "http-proxy-middleware": "^1.0.5"
     },
     "devDependencies": {
         "concurrently": "^4.0.1"
