--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
         "http-proxy-middleware": "^1.0.5",
+        "moment": "^2.27.0",
         "multer": "^1.4.2",
         "mysql": "^2.18.1"
     },
